--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-10}
+\date{2020-07-11}
 
 \begin{document}
 \maketitle
@@ -322,25 +322,24 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rsconnect_0.8.16        
-##   rstudioapi_0.11          rvest_0.3.5             
-##   scales_1.1.1             selectr_0.4.2           
-##   sem_3.1.11               semTools_0.5.3          
-##   skimr_2.1.1              snakecase_0.11.0        
-##   splines_4.0.2            StanHeaders_2.21.0.5    
-##   statmod_1.4.34           stats_4.0.2             
-##   stats4_4.0.2             stringi_1.4.6           
-##   stringr_1.4.0            survival_3.1-12         
-##   sys_3.3                  testthat_2.3.2          
-##   tibble_3.0.1             tidyr_1.1.0             
-##   tidyselect_1.1.0         tidyverse_1.3.0         
-##   tinytex_0.23             tmvnsim_1.0-2           
-##   tools_4.0.2              utf8_1.1.4              
-##   utils_4.0.2              vctrs_0.3.1             
-##   viridis_0.5.1            viridisLite_0.3.0       
-##   whisker_0.4              withr_2.2.0             
-##   xfun_0.14                xml2_1.3.2              
-##   yaml_2.2.1
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.1            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.1              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -4759,8 +4758,8 @@ Researchers, and consumers of research, typically have little interest in making
 
 Statistic tests are means of helping researchers use sample data to make conclusions at the population level. When we calculate numbers based on all of the people/animals in the population we refer to those numbers as \textbf{parameters}. We calculate numbers based on the people/animals in the sample we refer to those numbers as \textbf{statistics}. In general, statistics are used to estimate parameters.
 
-\hypertarget{describing-populations}{%
-\section{Describing populations}\label{describing-populations}}
+\hypertarget{a-small-population}{%
+\section{A small population}\label{a-small-population}}
 
 Populations are typically quite large, but, for the purpose or reviewing how we typically describe populations we focus on a population of just three chocolate chip cookies. We refer to the three cookies as \(X_1\), \(X_2\), and \(X_3\). The cookies have the weights of 8, 10, and 12 grams, respectively.
 
@@ -4830,7 +4829,7 @@ Variance is a simple approach to assessing the fit of the model. With this appro
 
 Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
 
-\begin{longtable}[]{@{}ccc@{}}
+\begin{longtable}[]{@{}lll@{}}
 \toprule
 Cookie Mass & Model & Error = Squared Difference\tabularnewline
 \midrule
@@ -4867,7 +4866,7 @@ var(X) &= \frac{\sum{(X - \bar{X})^2}}{N}\\
 
 \textbf{Variance by any other name}. Variance is used in many places in inferential statistics. Unfortunately, it often goes by other name. Some of those names are listed below.
 
-\begin{longtable}[]{@{}c@{}}
+\begin{longtable}[]{@{}l@{}}
 \toprule
 Variance synonyms\tabularnewline
 \midrule
@@ -4903,7 +4902,32 @@ sd(X) &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
 \end{aligned} 
 \]
 
-We encourage you to think in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straight forward. Additionally, variance if the foundational to the language used to describe regression and analysis of variance.
+We encourage you to think primarily in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straightforward. Additionally, variance is foundational in the language used to describe regression and analysis of variance. That said, standard deviation is used in the calculation of some standardized effect sizes - so it is important to know and understand both indices.
+
+\hypertarget{comparing-populations}{%
+\section{Comparing populations}\label{comparing-populations}}
+
+Here is a bunch of text comparing population. For this text see Figure \ref{fig:dex1}.
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex1} \caption{The difference between two population means can be expressed in the original units as indicated by $\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also know as the population-level $d$-value and is represented by the symbol $\delta$. The SMD is a way of expressing the difference between population means without using the original units. }\label{fig:dex1}
+\end{figure}
+
+Here is a bunch of text comparing population. For this text see Figure \ref{fig:dex2}.
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex2} \caption{An advantage of using the Standardized Mean Difference (SMD) to index the difference between two population means (i.e., $\delta$) is that it takes the population standard deviation into account. In these three examples, the difference between the populations means is the same using the original/raw units of centimeters. However, the standard deviation of the populations varies across scenarios A, B, and C. The SMD illustrates that these three scenarios are different. If you only looked the difference in the original units (i.e., $\Delta M$) you would conclude the effect is the same across the three scenarios. However, by using SMD, indexed by $\delta$ - the population $d$-value, you see that the effect is progressively stronger from scenario A, to B, to C. This is illustrated by the fact that there is progressively less overlap between the distributions as you move from scenario A to C.}\label{fig:dex2}
+\end{figure}
+
+Here is a bunch of text comparing population. For this text see Figure \ref{fig:dex3}.
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex3} \caption{The three scenarios in this figure illustrate that a Standardized Mean Difference (i.e., population $d$-value or $\delta$) can remain constant across scenarios when there is a change in the raw difference (i.e., $\Delta M$) between the population means. This constant SMD occurs because the standard deviations also changes across the three scenarios.}\label{fig:dex3}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex4} \caption{Cohen's (1988) effect size benchmarks.}\label{fig:dex4}
+\end{figure}
 
 \cleardoublepage
 
