--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -647,17 +647,24 @@ dev.off()
 
 ## Comparing populations
 
+### $d$-value units
+
 Here is a bunch of text comparing population. For this text see Figure \@ref(fig:dex1).
 
 ```{r dex1, fig.cap="The difference between two population means can be expressed in the original units as indicated by $\\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also know as the population-level $d$-value and is represented by the symbol $\\delta$. The SMD is a way of expressing the difference between population means without using the original units. ", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex1.png")
 ```
 
+### $d$-value advantages
+
+
 Here is a bunch of text comparing population. For this text see Figure \@ref(fig:dex2).
 
 ```{r dex2, fig.cap="An advantage of using the Standardized Mean Difference (SMD) to index the difference between two population means (i.e., $\\delta$) is that it takes the population standard deviation into account. In these three examples, the difference between the populations means is the same using the original/raw units of centimeters. However, the standard deviation of the populations varies across scenarios A, B, and C. The SMD illustrates that these three scenarios are different. If you only looked the difference in the original units (i.e., $\\Delta M$) you would conclude the effect is the same across the three scenarios. However, by using SMD, indexed by $\\delta$ - the population $d$-value, you see that the effect is progressively stronger from scenario A, to B, to C. This is illustrated by the fact that there is progressively less overlap between the distributions as you move from scenario A to C.", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex2.png")
 ```
+
+### $d$-value caveats
 
 
 Here is a bunch of text comparing population. For this text see Figure \@ref(fig:dex3).
@@ -666,7 +673,7 @@ Here is a bunch of text comparing population. For this text see Figure \@ref(fig
 knitr::include_graphics("ch_populations/images/dvalue_ex3.png")
 ```
 
-
+### Benchmarks
 
 ```{r dex4, fig.cap="Cohen's (1988) effect size benchmarks.", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex4.png")
