--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -644,6 +644,15 @@ png(file = "ch_populations/images/dvalue_ex4.png", res = 300, width = 8*300, hei
 gridExtra::grid.arrange(g1, g2, g3, nrow =3)
 dev.off()
 ```
+## Visualizing populations
+
+Three different ways
+
+* histotext
+
+* histogram
+
+* density curve
 
 ## Comparing populations
 
@@ -680,3 +689,18 @@ knitr::include_graphics("ch_populations/images/dvalue_ex4.png")
 ```
 
 
+## Key ponts
+
+* Populations are described using parameters
+
+* Commonly used parameters include mean (mu or Xbar), variance (sigma2), or sd(sigma2)
+
+* Population differences can be described in original raw units or standardized units called the standardized mean difference (SMD).
+
+* SMDis a common effect size for comparing means.
+
+* SMD is based on the premise that the two population being compared have the same standard deviation
+
+* SMD is indicated at the population level using the greek letter delta ($\delta$). At the sample level we tend to use the term "$d$-value".
+
+* SMD, or Cohen's d, values represent the number of standard deviations between two population means
