--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -1,17 +1,8 @@
-# Populations and samples
+# Populations
 
 ```{r, include=FALSE}
 library(tidyverse)
 ```
-
-## Required Packages
-
-The following packages must be installed before starting this chapter.
-
-| Required Packages |
-|-------------------|
-|tidyverse          |
-
 
 ## Notation
 
@@ -179,7 +170,7 @@ knitr::include_graphics("ch_populations/images/cookie.png")
 
 Variance is a simple approach to assessing the fit of the model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \@ref(fig:meancookie). The deviation between each data point and the model is referred to as error. 
 
-Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., $(8 - 10)^2 = 4$). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., $(8 - 10) = -2$) or take the absolute difference (e.g., $|8 - 10|= 2$)? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
+**Why use squared errors?** Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., $(8 - 10)^2 = 4$). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., $(8 - 10) = -2$) or take the absolute difference (e.g., $|8 - 10|= 2$)? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
 
 
 
@@ -689,18 +680,21 @@ knitr::include_graphics("ch_populations/images/dvalue_ex4.png")
 ```
 
 
-## Key ponts
+## Key points
 
-* Populations are described using parameters
+* Populations are described using numbers called parameters.
 
-* Commonly used parameters include mean (mu or Xbar), variance (sigma2), or sd(sigma2)
+* Commonly used parameters include mean ($\mu$ or $\bar{X}$), variance ($\sigma^2$), or standard deviation ($\sigma$). Population-level parameters are often represented using Greek letter.
 
 * Population differences can be described in original raw units or standardized units called the standardized mean difference (SMD).
 
-* SMDis a common effect size for comparing means.
+* SMD is an effect size.
+
+* SMD is a useful for comparing means.
 
 * SMD is based on the premise that the two population being compared have the same standard deviation
 
-* SMD is indicated at the population level using the greek letter delta ($\delta$). At the sample level we tend to use the term "$d$-value".
+* SMD (i.e,. Cohen's d) represents the number of standard deviations between two population means. Recall both populations have the same standard deviation.
 
-* SMD, or Cohen's d, values represent the number of standard deviations between two population means
+* SMD is indicated at the population level using the greek letter delta ($\delta$). At the sample level we tend to use the term "$d$-value" or "Cohen's $d$".
+
