--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -4652,22 +4652,8 @@ We calculated reliability using psych::alpha() command. Cronbach's alpha is labe
 ##  0.3239   0.2927
 \end{verbatim}
 
-\hypertarget{populations-and-samples}{%
-\chapter{Populations and samples}\label{populations-and-samples}}
-
-\hypertarget{required-packages-1}{%
-\section{Required Packages}\label{required-packages-1}}
-
-The following packages must be installed before starting this chapter.
-
-\begin{longtable}[]{@{}l@{}}
-\toprule
-Required Packages\tabularnewline
-\midrule
-\endhead
-tidyverse\tabularnewline
-\bottomrule
-\end{longtable}
+\hypertarget{populations}{%
+\chapter{Populations}\label{populations}}
 
 \hypertarget{notation}{%
 \section{Notation}\label{notation}}
@@ -4828,7 +4814,7 @@ Variance is a simple way of calculating how well the model fits our data. We can
 
 Variance is a simple approach to assessing the fit of the model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \ref{fig:meancookie}. The deviation between each data point and the model is referred to as error.
 
-Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
+\textbf{Why use squared errors?} Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
@@ -4905,6 +4891,20 @@ sd(X) &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
 
 We encourage you to think primarily in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straightforward. Additionally, variance is foundational in the language used to describe regression and analysis of variance. That said, standard deviation is used in the calculation of some standardized effect sizes - so it is important to know and understand both indices.
 
+\hypertarget{visualizing-populations}{%
+\section{Visualizing populations}\label{visualizing-populations}}
+
+Three different ways
+
+\begin{itemize}
+\item
+  histotext
+\item
+  histogram
+\item
+  density curve
+\end{itemize}
+
 \hypertarget{comparing-populations}{%
 \section{Comparing populations}\label{comparing-populations}}
 
@@ -4941,6 +4941,28 @@ Here is a bunch of text comparing population. For this text see Figure \ref{fig:
 \begin{figure}
 \includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex4} \caption{Cohen's (1988) effect size benchmarks.}\label{fig:dex4}
 \end{figure}
+
+\hypertarget{key-points}{%
+\section{Key points}\label{key-points}}
+
+\begin{itemize}
+\item
+  Populations are described using numbers called parameters.
+\item
+  Commonly used parameters include mean (\(\mu\) or \(\bar{X}\)), variance (\(\sigma^2\)), or standard deviation (\(\sigma\)). Population-level parameters are often represented using Greek letter.
+\item
+  Population differences can be described in original raw units or standardized units called the standardized mean difference (SMD).
+\item
+  SMD is an effect size.
+\item
+  SMD is a useful for comparing means.
+\item
+  SMD is based on the premise that the two population being compared have the same standard deviation
+\item
+  SMD (i.e,. Cohen's d) represents the number of standard deviations between two population means. Recall both populations have the same standard deviation.
+\item
+  SMD is indicated at the population level using the greek letter delta (\(\delta\)). At the sample level we tend to use the term ``\(d\)-value'' or ``Cohen's \(d\)''.
+\end{itemize}
 
 \cleardoublepage
 
