--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -645,11 +645,64 @@ Three different ways
 
 * density curve
 
-## Comparing populations
+## Population comparisons
+
+To faciliate comparing two populations we use the example the heights of males and females - measured in centimeters. There is variability in the heights of both males and females. However, on average, males are taller than females. That is, the mean of the male population is higher than the mean of the female population.
+
+In this section we present a large number of hypothetical populations representing the heights of males and females. Each of the following figures contains three scenarios (labeled A, B, C) in which we manipulate the mean height and variability of the populations. In each scenario the standard deviation of heights is the same for the male and female populations.
+
+
+### Standardized units
+
+#### Individual scores
+
+Often when we compare two means we use the original meteric - in the case of the male and female heights that metric is centimeters. The original units are a useful way to convey information about the difference between two populations.
+
+In addition to the original unit metric, however, it is also possible - and sometimes desirable to use the standardized mean difference. The word *standardized* is used to indicate that the comparison is relative to the standard deviation.
+
+
+Imagine a population male heights ($\mu = 170$,$\sigma = 10$) from which we have obtained a single individual, Ian, who's height is 185 cm.
+
+$$
+X_{Ian} = 185cm
+$$
+
+The raw meteric is useful for describing Ian's height but it doesn't tell use about his height relative to the other people in the population. We have to know the mean and standard deviation of the population to know if Ian is shorter or taller than the average height - and by how much.
+
+$$
+\begin{aligned} 
+z_{Ian} &=  \frac{X_{Ian} - \mu_{males}}{\sigma_{males}}\\ 
+&=  \frac{185 - 170}{10}\\
+&=  \frac{15}{10}\\
+&= 1.5
+\end{aligned} 
+$$
+
+The above calculation is a ratio. Ratios are used to compare two numbers. The numerator (number on the top) is compared to the denominator (number on bottom)  through division. The resulting number tells you how much larger the numerator is than the denominator.
+
+In this case, the numerator is the extent to which Ian is taller than the mean height for males ($X_{Ian} - \mu_{males}$). This numerator is compared to the denominator -- which is the standard deviation for males (\sigma_{males}). The resulting number is 1.50 which indicates the numerator is 1.50 times larger than the denominator. In other words, Ian is 1.50 standard deviations taller than the average male. This is a standardized score for Ian's height - it expresses the difference between his height and the mean height in standard deviation units.
+
+#### Population means
+
+The same approach to generating standardized scores can be applied to population means. Consider a situation where we have population of male heights ($\mu = 170$,$\sigma = 10$) and a population of female heights ($\mu = 165$,$\sigma = 10$). Notice that both populations have the same standard deviation.
+
+We can calculated a standardized value to compare these heights. This standardized value is called the standardized mean difference (SMD). Alternative, it is also known as Cohen's $d$ which is represented at the population level with the symbol $\delta$. Calculation of the standardized mean difference is based on the premise that both populations have the same standard deviation. 
+
+In this calculation the numerator represents the difference between the two population means. The denominator represents the population standard deviation - which is the same for both populations. The resulting division of this ratio reveals that the numerator is 0.50 times as large (i.e., half as large) as the denominator. That is, the difference between the populations is halve as larger as the standard deviation. Therefore, the population mean for males is 0.50 standard deviations larger than the population mean for female; $\delta = 0.50$:
+
+$$
+\begin{aligned} 
+\delta &=  \frac{\mu_{males} - \mu_{males}}{\sigma}\\ 
+&=  \frac{170 - 165}{10}\\
+&=  \frac{5}{10}\\
+&= 0.50
+\end{aligned} 
+$$
+
 
 ### $d$-value units
 
-Here is a bunch of text comparing population. For this text see Figure \@ref(fig:dex1).
+Because the metric for the standardized mean difference is the standard deviation  it can be easy to interpret if you are unfamiliar with the original units. It is usually a good idea to report difference between populations in both the original units (cm) and standardized umnits ($\delta$). Figure \@ref(fig:dex1) illustrates three different population difference scenarios (A through C). The population standard deviation is held constant across the three scenarios. You can see as the difference between the population means increases in raw units - it does the same in $\delta$ (i.e., Cohen's $d$) units. In raw units (i.e., cm), the difference the between the population means for scenarios A through C are 5 cm, 10 cm, and 20 cm, respectively. In standardized units (i.e., standard deviations), the difference the between the population means for scenarios A through C are 0.50  standard deviations, 1.0 standard deviations, and 2.0 standard deviations, respectively. In other words, the population-level Cohen's d-values are 0.50, 1.0, and 2.0 for scenarios A through C.
 
 ```{r dex1, fig.cap="The difference between two population means can be expressed in the original units as indicated by $\\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also know as the population-level $d$-value and is represented by the symbol $\\delta$. The SMD is a way of expressing the difference between population means without using the original units. ", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex1.png")
@@ -657,8 +710,7 @@ knitr::include_graphics("ch_populations/images/dvalue_ex1.png")
 
 ### $d$-value advantages
 
-
-Here is a bunch of text comparing population. For this text see Figure \@ref(fig:dex2).
+The standardized mean difference takes into account the variability of heights around each population mean. This means that the same difference between two population means can produce different standardized mean difference values if the population standard deviation varies. In the scenarios depicted in Figure \@ref(fig:dex2) the population standard deviation becomes increasing small - resulting in larger standaredized mean difference values (i.e., $\delta$). This larger $\delta$ value corresponds to progressively less overlap between the two populations. Thus, taking into account the standard deviation of the populations can be viewed as a strength of using the standardized mean difference.
 
 ```{r dex2, fig.cap="An advantage of using the Standardized Mean Difference (SMD) to index the difference between two population means (i.e., $\\delta$) is that it takes the population standard deviation into account. In these three examples, the difference between the populations means is the same using the original/raw units of centimeters. However, the standard deviation of the populations varies across scenarios A, B, and C. The SMD illustrates that these three scenarios are different. If you only looked the difference in the original units (i.e., $\\Delta M$) you would conclude the effect is the same across the three scenarios. However, by using SMD, indexed by $\\delta$ - the population $d$-value, you see that the effect is progressively stronger from scenario A, to B, to C. This is illustrated by the fact that there is progressively less overlap between the distributions as you move from scenario A to C.", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex2.png")
