--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -718,8 +718,7 @@ knitr::include_graphics("ch_populations/images/dvalue_ex2.png")
 
 ### $d$-value caveats
 
-
-Here is a bunch of text comparing population. For this text see Figure \@ref(fig:dex3).
+It is important to also look at the original units when intepreting results - not just the standardized mean difference. Exmaine the scenarios in Figure \@ref(fig:dex3). Notice how the $\delta$ value stays constant across scenarios - as does the overlap of the two distributions. However, inspect the shape of the curves and the original units to see how the scenarios vary. Both the original units and the standardized mean difference (i.e., Cohen's $d$) provide important interpretational information - dont' rely on just one of them.
 
 ```{r dex3, fig.cap="The three scenarios in this figure illustrate that a Standardized Mean Difference (i.e., population $d$-value or $\\delta$) can remain constant across scenarios when there is a change in the raw difference (i.e., $\\Delta M$) between the population means. This constant SMD occurs because the standard deviations also changes across the three scenarios.", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex3.png")
