--- a/book.bib
+++ b/book.bib
@@ -223,3 +223,21 @@
   year={2020},
   publisher={Pearson Technology Group}
 }
+
+@article{schafer2019meaningfulness,
+  title={The meaningfulness of effect sizes in psychological research: Differences between sub-disciplines and the impact of potential biases},
+  author={Sch{\"a}fer, Thomas and Schwarz, Marcus A},
+  journal={Frontiers in Psychology},
+  volume={10},
+  pages={813},
+  year={2019},
+  publisher={Frontiers},
+  url={https://doi.org/10.3389/fpsyg.2019.00813}
+}
+
+@book{cohen1988,
+  title={Statistical power analysis for the behavioral sciences},
+  author={Cohen, Jacob},
+  year={1988},
+  publisher={Academic press}
+}
